[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/obj_script_DnD.gd" type="Script" id=1]
[ext_resource path="res://assets/material/phone.tres" type="Material" id=2]
[ext_resource path="res://assets/computer_pieces/piece_5.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 228.355, 450.876 )

[node name="phone" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
z_as_relative = false
script = ExtResource( 1 )
piece_nb = "1"

[node name="s_shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.4 )
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="s" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="area" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
